[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-rc.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
memstore = "0.2.0"
openraft = "0.6.4"
anyhow = "1.0"
reqwest = { version = "0.11.9", features = ["json"] }
clap = { version = "3.0.13", features = ["derive", "env"] }
rust-crypto = "0.2.36"
reqwest = { version = "0.11.9", features = ["json"] }